unpackaged/main/default/objects/zkmulti__CommercialInvoice__c/zkmulti__CommercialInvoice__c.object-meta.xml
<CustomObject>
    <label>Commercial Invoice</label>
    <nameField>
        <displayFormat>COM-INV-{00000000}</displayFormat>
        <label>Commercial Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commercial Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>