unpackaged/main/default/objects/zkmulti__CommercialInvoice__c/fields/zkmulti__DeclarationStatement__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__DeclarationStatement__c</fullName>
    <label>Declaration Statement</label>
    <type>TextArea</type>
</CustomField>