unpackaged/main/default/objects/zkmulti__CommercialInvoice__c/fields/zkmulti__InvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__InvoiceDate__c</fullName>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>