unpackaged/main/default/objects/zkmulti__CommercialInvoice__c/fields/zkmulti__OtherChargesType__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__OtherChargesType__c</fullName>
    <label>Other Charges Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commissions</fullName>
            </value>
            <value>
                <fullName>Discounts</fullName>
            </value>
            <value>
                <fullName>Handling Fees</fullName>
            </value>
            <value>
                <fullName>Royalties and License Fees</fullName>
            </value>
            <value>
                <fullName>Taxes</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>