unpackaged/main/default/objects/zkmulti__CommercialInvoice__c/fields/zkmulti__OverrideSoldTo__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__OverrideSoldTo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Sold To</label>
    <type>Checkbox</type>
</CustomField>