unpackaged/main/default/objects/zkmulti__CommercialInvoice__c/fields/zkmulti__PartiesToTransactionAreRelated__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__PartiesToTransactionAreRelated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parties to Transaction are Related</label>
    <type>Checkbox</type>
</CustomField>