unpackaged/main/default/objects/zkmulti__CommercialInvoice__c/fields/zkmulti__ShipToTaxID__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ShipToTaxID__c</fullName>
    <label>Ship To TaxID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>