unpackaged/main/default/objects/zkmulti__CommercialInvoice__c/fields/zkmulti__SoldToAccount__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__SoldToAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Commercial Invoices</relationshipLabel>
    <relationshipName>Commercial_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>