unpackaged/main/default/objects/zkmulti__CommercialInvoice__c/fields/zkmulti__SoldToStreet__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__SoldToStreet__c</fullName>
    <label>Sold To Street</label>
    <type>TextArea</type>
</CustomField>