unpackaged/main/default/objects/zkmulti__CommercialInvoice__c/fields/zkmulti__SoldToTaxID__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__SoldToTaxID__c</fullName>
    <label>Sold To TaxID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>